Change skin, change hitCircle rendering method

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 </head>
 
 <body>
+    <div id="main">
+        <img id="sampleHitCircle" src="./static/hitcircle@2x.png">
+        <img id="sampleHitCircleOverlay" src="./static/hitcircleoverlay@2x.png">
+        <img id="sampleApproachCircle" src="./static/approachcircle.png">
+    </div>
     <canvas id="canvas" width="512" height="384"></canvas>
-    <div id="main"></div>
     <div id="cursorContainer">
         <div id="cursor"></div>
     </div>
