Added Combo Colour / Change slider snaking / opacity

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <img id="sampleHitCircle" src="./static/hitcircle@2x.png">
         <img id="sampleHitCircleOverlay" src="./static/hitcircleoverlay@2x.png">
         <img id="sampleApproachCircle" src="./static/approachcircle.png">
+        <img id="sampleSliderB" src="./static/sliderb@2x.png">
     </div>
     <canvas id="canvas" width="512" height="384"></canvas>
     <div id="cursorContainer">
