Idk i like the map and the song

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </svg>
         <!-- <img id="sampleHitCircleOverlay" src="./static/hitcircleoverlay@2x.png"> -->
         <!-- <img id="sampleApproachCircle" src="./static/approachcircle@2x.png"> -->
-        <img id="sampleSliderB" src="./static/sliderb@2x.png">
+        <img id="sampleSliderB" src="./static/sliderb0@2x.png">
     </div>
     <canvas id="canvas" width="512" height="384"></canvas>
     <div id="cursorContainer">
