--- a/index.html
+++ b/index.html
@@ -94,16 +94,46 @@
                 </xhtml:div>
             </foreignObject>
         </svg>
-        <!-- <img id="sampleHitCircleOverlay" src="./static/hitcircleoverlay@2x.png"> -->
-        <!-- <img id="sampleApproachCircle" src="./static/approachcircle@2x.png"> -->
         <img id="sampleSliderB" src="./static/sliderb0@2x.png">
     </div>
-    <div id="settingsPanel"></div>
     <div id="playerContainer">
         <div id="overlay"></div>
         <canvas id="canvas" width="512" height="384"></canvas>
         <button id="settingsButton" onclick="openMenu()"></button>
         <button id="playButton"></button>
+        <div class="loading">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="90px" height="90px">
+                <circle cx="45" cy="45" r="30" strokeLinecap="round" />
+            </svg>
+            <div id="loadingText">Loading: 0.00%</div>
+        </div>
+    </div>
+    <div id="settingsPanel">
+        <div class="section">
+            <div id="header">settings</div>
+            <div id="description">change the way the replayer behaves</div>
+        </div>
+        <div class="section">
+            <div id="title">mods</div>
+            <div class="list">
+                <div class="selection">
+                    <label for="HR">Hard Rock</label>
+                    <input type="checkbox" id="HR" name="HR" onchange='handleCheckBox(this);'>
+                </div>
+                <div class="selection">
+                    <label for="EZ">Easy</label>
+                    <input type="checkbox" id="EZ" name="EZ" onchange='handleCheckBox(this);'>
+                </div>
+                <div class="selection">
+                    <label for="DT">Double Time</label>
+                    <input type="checkbox" id="DT" name="DT" onchange='handleCheckBox(this);'>
+                </div>
+                <div class="selection">
+                    <label for="HT">Half Time</label>
+                    <input type="checkbox" id="HT" name="HT" onchange='handleCheckBox(this);'>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="cursorContainer">
         <div id="cursor"></div>
