--- a/index.html
+++ b/index.html
@@ -95,12 +95,33 @@
                 </xhtml:div>
             </foreignObject>
         </svg>
+        <svg xmlns='http://www.w3.org/2000/svg' id="sampleReverseArrow" width='276' height='276'
+            xmlns:xhtml="http://www.w3.org/1999/xhtml" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <foreignObject x="0" y="0" width='100%' height='100%'>
+                <xhtml:div id="reverseArrowSVG" style="
+                position: absolute; 
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-image: url(./static/reversearrow@2x.png);
+                background-size: 95% 95%;
+                background-repeat: no-repeat;
+                background-position: center;
+                transform: rotate(0);
+                ">
+                </xhtml:div>
+            </foreignObject>
+        </svg>
         <img id="sampleSliderB" src="./static/sliderb0@2x.png">
+    </div>
+    <div id="inputContainer">
+        <button id="settingsButton" onclick="openMenu()"></button>
+        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)">
+        <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
         <div id="overlay"></div>
         <canvas id="canvas" width="512" height="384"></canvas>
-        <button id="settingsButton" onclick="openMenu()"></button>
         <div id="metadata">
 
         </div>
@@ -118,7 +139,8 @@
             <span id="millisecond1digit" class="digit">0</span>
         </div>
         <button id="playButton"></button>
-        <input id="progress" type="range" min="0" step="0.1" value="0" onchange="setAudioTime(this)">
+        <input id="progress" type="range" min="0" step="0.1" value="0" onchange="setAudioTime(this)"
+            onkeydown="event.preventDefault()">
     </div>
     <div class="loading">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="90px" height="90px">
