--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
     <div id="inputContainer">
         <button id="settingsButton" onclick="openMenu()"></button>
-        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)">
+        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)" value="3939123">
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
