--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <xhtml:div id="hitCircleColor" style="
                 position: absolute; 
                 display: block;
-                top: 10px;
-                left: 10px;
-                width: 256px;
-                height: 256px;
+                top: 9px;
+                left: 9px;
+                width: 257px;
+                height: 257px;
                 background-color: rgb(82, 180, 115);
                 mix-blend-mode: multiply;
                 -webkit-mask-image:url(./static/hitcircle@2x.png);
-                -webkit-mask-size: cover;
+                -webkit-mask-size: 101%;
                 mask-image:url(./static/hitcircle@2x.png);
-                mask-size: cover;
+                mask-size: 101%;
                 ">
                 </xhtml:div>
                 <xhtml:div id="hitCircleOverlay" style="
@@ -116,7 +116,7 @@
     </div>
     <div id="inputContainer">
         <button id="settingsButton" onclick="openMenu()"></button>
-        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)" value="3939123">
+        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)" value="966335">
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
@@ -171,6 +171,29 @@
                 <div class="selection">
                     <label for="HT">half time</label>
                     <input type="checkbox" id="HT" name="HT" onchange='handleCheckBox(this);'>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div id="title">slider appearance</div>
+            <div class="list">
+                <div class="selection">
+                    <label for="untint">un-tint slider border</label>
+                    <input type="checkbox" id="untint" name="untint" onchange='handleCheckBox(this);' value="false">
+                </div>
+                <div class="selection">
+                    <label for="legacy">use legacy slider render style</label>
+                    <input type="checkbox" id="legacy" name="legacy" onchange='handleCheckBox(this);' value="false">
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div id="title">background</div>
+            <div class="list">
+                <div class="selection slider">
+                    <label for="dim">background dim</label>
+                    <input type="range" id="dim" name="dim" min="0" max="1" step="0.01"
+                        oninput='setBackgroundDim(this);' value="0.8">
                 </div>
             </div>
         </div>
