--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
     <div id="inputContainer">
         <button id="settingsButton" onclick="openMenu()"></button>
-        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)" value="966335">
+        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: b/3939123)" value="580225">
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
@@ -177,6 +177,10 @@
         <div class="section">
             <div id="title">slider appearance</div>
             <div class="list">
+                <div class="selection">
+                    <label for="snaking">snaking sliders</label>
+                    <input type="checkbox" id="snaking" name="snaking" onchange='handleCheckBox(this);' checked>
+                </div>
                 <div class="selection">
                     <label for="untint">un-tint slider border</label>
                     <input type="checkbox" id="untint" name="untint" onchange='handleCheckBox(this);' value="false">
