--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <span id="millisecond1digit" class="digit">0</span>
         </div>
         <button id="playButton"></button>
-        <input id="progress" type="range" min="0" step="0.1" value="0" onchange="setAudioTime(this)"
+        <input id="progress" type="range" min="0" step="0.1" value="0" oninput="setAudioTime(this)"
             onkeydown="event.preventDefault()">
     </div>
     <div class="loading">
