Added faded out sliderball

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <input type="checkbox" id="snaking" name="snaking" onchange='handleCheckBox(this);' checked>
                 </div>
                 <div class="selection">
-                    <label for="untint">un-tint slider border</label>
+                    <label for="untint">un-tint sliders</label>
                     <input type="checkbox" id="untint" name="untint" onchange='handleCheckBox(this);' value="false">
                 </div>
                 <div class="selection">
