--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
                 </xhtml:div>
             </foreignObject>
         </svg>
+        <svg xmlns='http://www.w3.org/2000/svg' id="sampleSliderB" width='276' height='276'
+            xmlns:xhtml="http://www.w3.org/1999/xhtml" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <foreignObject x="0" y="0" width='100%' height='100%'>
+                <xhtml:div id="sliderBSVG" style="
+                position: absolute; 
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-image: url(./static/sliderb0@2x.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                ">
+                </xhtml:div>
+            </foreignObject>
+        </svg>
         <img id="sampleDefault" src="./static/default-1@2x.png">
     </div>
     <div id="inputContainer">
@@ -167,7 +182,7 @@
             <span id="millisecond2digit" class="digit">0</span>
             <span id="millisecond1digit" class="digit">0</span>
         </div>
-        <button id="playButton"></button>
+        <button id="playButton" onclick="playToggle()"></button>
         <input id="progress" type="range" min="0" step="0.1" value="0" oninput="setAudioTime(this)"
             onkeydown="event.preventDefault()">
         <input id="volumeSlider" type="range" min="0" max="1" step="0.01" value="0.1" oninput="setAudioVolume(this)">
