--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
         <div id="overlay"></div>
         <canvas id="canvas" width="512" height="384"></canvas>
         <div id="metadata">
-
+            <div id="artistTitle"></div>
+            <div id="versionCreator"></div>
         </div>
     </div>
     <div id="playerController">
