Changed placeholder input

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
     <div id="inputContainer">
         <button id="settingsButton" onclick="openMenu()"></button>
-        <input id="mapInput" type="text" placeholder="enter beatmap id (eg: 3939123)" value="3717528">
+        <input id="mapInput" type="text" placeholder="enter beatmap id (after the /b/)" value="3717528">
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
