--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
     <div id="inputContainer">
         <button id="settingsButton" onclick="openMenu()"></button>
-        <input id="mapInput" type="text" placeholder="enter beatmap id (the very last numbers in the url)" value="3717528">
+        <input id="mapInput" type="text" placeholder="enter beatmap id (not beatmapset id)" value="3717528">
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
