Added URL detection

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
     </div>
     <div id="inputContainer">
         <button id="settingsButton" onclick="openMenu()"></button>
-        <input id="mapInput" type="text" placeholder="enter beatmap id (not beatmapset id)" value="1944844">
+        <div id="inputWrapper">
+            <input id="mapInput" type="text" placeholder=" " value="1944844">
+        </div>
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
