--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <button id="submit">Load</button>
     </div>
     <div id="playerContainer">
+        <div id="background"></div>
         <div id="overlay"></div>
         <div id="metadata">
             <div id="artistTitle"></div>
@@ -190,7 +191,7 @@
         <button id="nextButton" onclick="goNext()"></button>
         <input id="progress" type="range" min="0" step="1" value="0" oninput="setAudioTime(this)"
             onkeydown="event.preventDefault()">
-        <input id="volumeSlider" type="range" min="0" max="0.4" step="0.01" value="0.1" oninput="setAudioVolume(this)">
+        <!-- <input id="volumeSlider" type="range" min="0" max="0.4" step="0.01" value="0.1" oninput="setAudioVolume(this)"> -->
     </div>
     <div class="loading">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="90px" height="90px">
@@ -213,6 +214,29 @@
                 </div>
             </div>
         </div> -->
+        <div class="section">
+            <div id="title">audio</div>
+            <div class="list">
+                <div class="selection slider">
+                    <label for="master">master volume</label>
+                    <div id="masterVal" class="val">100%</div>
+                    <input type="range" id="master" name="master" min="0" max="1" step="0.01"
+                        oninput='setMasterVolume(this);' value="1">
+                </div>
+                <div class="selection slider">
+                    <label for="music">music volume</label>
+                    <div id="musicVal" class="val">25%</div>
+                    <input type="range" id="music" name="music" min="0" max="0.4" step="0.004"
+                        oninput='setAudioVolume(this);' value="0.1">
+                </div>
+                <div class="selection slider">
+                    <label for="effect">effect volume</label>
+                    <div id="effectVal" class="val">25%</div>
+                    <input type="range" id="effect" name="effect" min="0" max="0.4" step="0.004"
+                        oninput='setEffectVolume(this);' value="0.1">
+                </div>
+            </div>
+        </div>
         <div class="section">
             <div id="title">mods</div>
             <div class="list">
@@ -256,8 +280,15 @@
             <div class="list">
                 <div class="selection slider">
                     <label for="dim">background dim</label>
+                    <div id="bgDimVal" class="val">80%</div>
                     <input type="range" id="dim" name="dim" min="0" max="1" step="0.01"
                         oninput='setBackgroundDim(this);' value="0.8">
+                </div>
+                <div class="selection slider">
+                    <label for="blur">background blur</label>
+                    <div id="bgBlurVal" class="val">0%</div>
+                    <input type="range" id="blur" name="blur" min="0" max="20" step="0.2"
+                        oninput='setBackgroundBlur(this);' value="0">
                 </div>
             </div>
         </div>
