Added timestamp copy

--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
         <canvas id="canvas" width="512" height="384"></canvas>
     </div>
     <div id="playerController">
-        <div id="timeContainer">
+        <div id="timeContainer" onclick="copyUrlToClipboard()">
             <span id="minute2digit" class="digit">0</span>
             <span id="minute1digit" class="digit">0</span>
-            :
+            <span>:</span>
             <span id="second2digit" class="digit">0</span>
             <span id="second1digit" class="digit">0</span>
-            :
+            <span>:</span>
             <span id="millisecond3digit" class="digit">0</span>
             <span id="millisecond2digit" class="digit">0</span>
             <span id="millisecond1digit" class="digit">0</span>
