Added hit animation toggles

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
         </div>
         <div class="section">
-            <div id="title">slider appearance</div>
+            <div id="title">visual</div>
             <div class="list">
                 <div class="selection">
                     <label for="snaking">snaking sliders</label>
@@ -272,6 +272,10 @@
                 <div class="selection">
                     <label for="legacy">use legacy slider render style</label>
                     <input type="checkbox" id="legacy" name="legacy" onchange='handleCheckBox(this);' value="false">
+                </div>
+                <div class="selection">
+                    <label for="hitAnim">hit animations</label>
+                    <input type="checkbox" id="hitAnim" name="hitAnim" onchange='handleCheckBox(this);' checked>
                 </div>
             </div>
         </div>
