Fixed group selecting not expanding through time

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Test Lazer</title>
+    <title>JoSu!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
@@ -100,7 +100,7 @@
                 width: 100%;
                 height: 100%;
                 background-image: url(./static/approachcircle@2x.png);
-                background-size: 95% 95%;
+                background-size: 97% 97%;
                 background-repeat: no-repeat;
                 background-position: center;
                 ">
@@ -113,7 +113,7 @@
                 background-color: rgb(82, 180, 115);
                 mix-blend-mode: multiply;
                 -webkit-mask-image:url(./static/approachcircle@2x.png);
-                -webkit-mask-size: 95% 95%;
+                -webkit-mask-size: 97% 97%;
                 -webkit-mask-repeat: no-repeat;
                 -webkit-mask-position: center;
                 mask-image:url(./static/approachcircle@2x.png);
@@ -199,6 +199,7 @@
         </svg>
         <div id="loadingText">Loading: 0.00%</div>
     </div>
+    <div id="block"></div>
     <div id="settingsPanel">
         <div class="section">
             <div id="header">settings</div>
