--- a/index.html
+++ b/index.html
@@ -224,6 +224,15 @@
                     <input type="range" id="beat" name="beat" min="1" max="16" step="1"
                         oninput='setBeatsnapDivisor(this);' value="4">
                 </div>
+                <div class="selection slider">
+                    <label for="softoffset">offset</label>
+                    <div class="note">
+                        <div class="sign">-</div> &nbsp;late --------- music --------- early <div class="sign">+</div>
+                    </div>
+                    <div id="softoffsetVal" class="val">0ms</div>
+                    <input type="range" id="softoffset" name="softoffset" min="-100" max="100" step="1"
+                        oninput='setOffset(this);' value="0" >
+                </div>
             </div>
         </div>
         <div class="section">
