--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'> -->
     <link rel="stylesheet" href="./styles/styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./deps/countUp.js"></script>
-    <script src="./deps/pixi.min.js"></script>
     <script src="./scripts/CubicBezier.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./scripts/GlobalVariables.js"></script>
+    <script src="./lib/zip-fs-full.js"></script>
+    <script src="./deps/pixi.min.js"></script>
     <script src="./scripts/Audio.js"></script>
     <script src="./scripts/Cursor.js"></script>
     <script src="./scripts/ApproachCircle.js"></script>
@@ -23,7 +24,7 @@
     <script src="./scripts/ObjectsList.js"></script>
     <script src="./scripts/Beatmap.js"></script>
     <script src="./scripts/BeatmapFile.js"></script>
-    <script src="./lib/zip-fs-full.min.js"></script>
+    <!-- <script src="./lib/zip-fs-full.min.js"></script> -->
     <script src="./index.js" defer></script>
 </head>
 
