Add Favicon - Fixed scrolling for the nth time

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>JoSu!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv='expires' content='0'>
-    <meta http-equiv='pragma' content='no-cache'> -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="./deps/countUp.js"></script>
     <script src="./scripts/CubicBezier.js"></script>
