--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JoSu!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="./deps/countUp.js"></script>
     <script src="./scripts/CubicBezier.js"></script>
