Fixed HR stats | ADDED HIDDEN MODIFICATION!!!! ALERT ALERT ALERT

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
             <div id="title">mods</div>
             <div class="list">
                 <div class="selection">
+                    <label for="HD">HIDDEN MODIFICATION!!!</label>
+                    <input type="checkbox" id="HD" name="HD" onchange='handleCheckBox(this);'>
+                </div>
+                <div class="selection">
                     <label for="HR">hard rock</label>
                     <input type="checkbox" id="HR" name="HR" onchange='handleCheckBox(this);'>
                 </div>
