Remove HD discrimination XD | Change Legacy slider ball and hit circle style | force x2 resolution on mobile devices

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div id="title">mods</div>
             <div class="list">
                 <div class="selection">
-                    <label for="HD">HIDDEN MODIFICATION!!!</label>
+                    <label for="HD">hidden</label>
                     <input type="checkbox" id="HD" name="HD" onchange='handleCheckBox(this);'>
                 </div>
                 <div class="selection">
