--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./scripts/ApproachCircle.js"></script>
     <script src="./scripts/HitCircle.js"></script>
     <script src="./scripts/Slider.js"></script>
+    <script src="./scripts/Spinner.js"></script>
     <script src="./scripts/SliderMesh.js"></script>
     <script src="./scripts/ObjectsList.js"></script>
     <script src="./scripts/Beatmap.js"></script>
